--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@hono/node-server": "^1.19.1",
+    "@hono/node-server": "1.19.1",
     "@hono/trpc-server": "^0.4.0",
     "@nkzw/create-context-hook": "^1.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
@@ -40,7 +40,7 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
-    "hono": "^4.9.4",
+    "hono": "4.9.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react-native": "^0.475.0",
     "nativewind": "^4.1.23",
@@ -55,7 +55,7 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
     "superjson": "^2.2.2",
-    "ts-node": "^10.9.2",
+    "ts-node": "10.9.2",
     "zod": "^4.0.17",
     "zustand": "^5.0.2"
   },
@@ -63,7 +63,7 @@
     "@babel/core": "^7.25.2",
     "@expo/ngrok": "^4.1.0",
     "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "typescript": "5.9.2"
   },
   "private": true
 }
