tRPC routing fix: endpoint configuration corrected

--- a/.env
+++ b/.env
@@ -1,7 +1,12 @@
 NODE_ENV=production
-PORT=3000
+BACKEND_PORT=3000
 DATABASE_URL=postgresql://app_user:LKW_Peter123@localhost:5432/fitness_app
 JWT_SECRET=aN8hS3kZrPq!xY9mWt7sKuF2LgJeD4b
 CORS_ORIGIN=https://app.functional-wiehl.de
 API_BASE_URL=https://app.functional-wiehl.de/api
 EXPO_PUBLIC_RORK_API_BASE_URL=https://app.functional-wiehl.de
+PGHOST=localhost
+PGPORT=5432
+PGUSER=app_user
+PGPASSWORD=LKW_Peter123
+PGDATABASE=fitness_app
